force-app/main/default/objects/Yacht__c/Yacht__c.object-meta.xml
<CustomObject>
    <label>Yacht</label>
    <nameField>
        <label>Yacht Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yachts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>