force-app/main/default/objects/Yacht__c/fields/External_Yacht_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Yacht_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Yacht ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>