force-app/main/default/objects/Yacht__c/fields/Minimum_Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Party_Size__c</fullName>
    <label>Minimum Party Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>