force-app/main/default/objects/Yacht__c/fields/Yacht_Type__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Type__c</fullName>
    <label>Yacht Type</label>
    <referenceTo>Yacht_Type__c</referenceTo>
    <relationshipLabel>Yachts</relationshipLabel>
    <relationshipName>Yachts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>